More linter cleanup